<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:background="@color/colorBg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".signupAct">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/phoneReg" android:layout_weight="1" android:hint="@string/ent_phone"
            android:padding="8dp" android:layout_margin="8dp" android:autoText="false"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:id="@+id/passReg" android:layout_weight="1" android:hint="@string/ent_pass"
            android:layout_margin="8dp" android:padding="8dp"
    />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:id="@+id/passConfirm" android:layout_weight="1" android:hint="@string/pass_confirm"
            android:layout_margin="8dp" android:padding="8dp"
    />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:id="@+id/regName" android:layout_weight="1" android:hint="@string/reg_name"
            android:layout_margin="8dp" android:padding="8dp"
    />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:id="@+id/regAdd" android:layout_weight="1" android:hint="@string/reg_add"
            android:layout_margin="8dp" android:padding="8dp"
    />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:id="@+id/regEmail" android:layout_weight="1" android:hint="@string/reg_email"
            android:layout_margin="8dp" android:padding="8dp"
            android:inputType="textEmailAddress"/>

    <TextView
            android:text="@string/signup_btn"
            android:gravity="center"
            android:textSize="22sp"
            android:layout_marginBottom="24dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorBg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/regSignUp" android:layout_weight="1"
            app:fontFamily="sans-serif" android:padding="8dp" android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp" android:layout_marginTop="36dp"/>



</LinearLayout>